# python-fastapi-workshop

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  restaurants.json
tests/: test_app.py
